--- a/templates/dashboard/events/base.html
+++ b/templates/dashboard/events/base.html
@@ -209,14 +209,14 @@
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="html/subscription/subscriptions.html" class="nk-menu-link">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-file-text"></em></span>
-                                                <span class="nk-menu-text">Event List</span>
+                                                <span class="nk-menu-icon"><em class="icon ni ni-clock"></em></span>
+                                                <span class="nk-menu-text">Timetable</span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
                                             <a href="html/subscription/payments.html" class="nk-menu-link">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-report-profit"></em></span>
-                                                <span class="nk-menu-text">Ticket</span>
+                                                <span class="nk-menu-icon"><em class="icon ni ni-user-check"></em></span>
+                                                <span class="nk-menu-text">Attendees</span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-item">
@@ -228,13 +228,7 @@
                                         <li class="nk-menu-item">
                                             <a href="html/subscription/downloads.html" class="nk-menu-link">
                                                 <span class="nk-menu-icon"><em class="icon ni ni-download-cloud"></em></span>
-                                                <span class="nk-menu-text">Download</span>
-                                            </a>
-                                        </li>
-                                        <li class="nk-menu-item">
-                                            <a href="html/subscription/profile-setting.html" class="nk-menu-link">
-                                                <span class="nk-menu-icon"><em class="icon ni ni-puzzle"></em></span>
-                                                <span class="nk-menu-text">Research Sources</span>
+                                                <span class="nk-menu-text">Presentations</span>
                                             </a>
                                         </li>
                                         <li class="nk-menu-heading">
